# orbit

./: CMakeLists.txt  README.md  makefile  orbit  orbit.cpp  orbit2D.py  orbit3d.py  orbit3danim.py  plot.py  plotm.py
include/: iniparser.h  matplotlibcpp.h  particle.h  world.h
inputfiles/: input_3body.ini  input_solarsystem.ini
src/: iniparser.cpp  main.cpp  particle.cpp  world.cpp
